--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <video id=v autoplay=autoplay>
       <source id=s src=''></source>
     </video>
+    <audio id=a controls></audio>
     <button id=b>next</button>
   </body>
   <script src=https://cdnjs.cloudflare.com/ajax/libs/simple-peer/9.9.3/simplepeer.min.js></script>
